# partsbox-import

./: .env  all_parts.py  import_parts.py  import_storage.py  part_id_mapping.json  partsbox-backup-2024-12-19.json  partsbox_import.py  pyproject.toml  server.py  storage_id_mapping.json  update_stock.py
metaparts/: add_metapart.py  all_parts.csv  all_parts.json  extracted_parts.json  lcsc.csv  lcsc.json  lcsc.py  part_specs.json  part_specs.py
partsbox_metapart_generator/: Cargo.toml
partsbox_metapart_generator/src/: footprint.rs  lib.rs  main.rs  partsbox_api.rs
partsbox_metapart_generator/src/concrete_part/: mod.rs
partsbox_metapart_generator/src/metapart/: capacitor.rs  mod.rs  resistor.rs
scripts/: import_parts.py  map_parts.py
todo/: link_manually.csv  projects.txt
