[package]
name = "partsbox_metapart_generator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = "4.6.1"
dotenv = { version = "0.15.0", features = ["clap"] }
reqwest = { version = "0.13.3", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.149"
